welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var compteur=1
^Poucet:18: error: ';' expected but 'else' found.
 else {
 ^Poucet:23: error: ';' expected but 'while' found.
 } while(!croisement())
   ^Poucet:28: error: 'while' expected but 'if' found.
if (sortieTrouvee()) {
^Poucet:33: error: '(' expected but '}' found.
	}
        ^