welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur=1

while (!sortieTrouvee())
{
	
 do {
avance()

 	
if(estSurBiscuit)	{
	compteur=compteur +1
}
 	
 if (compteur>=3) {
 	gauche()
 	avance()
 else {
 	droite()
 	avance();avance();avance();avance();avance()	
}
 		
 } while(!croisement())

}


if (sortieTrouvee()) {
	avance()
}
